fixed image alignment for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,6 @@ footer {
   }
   .calculator-background {
     background-image: url("https://images.pexels.com/photos/416809/pexels-photo-416809.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-    background-position-y: -0.5rem;
   }
   .results-background {
     background-image: url("https://images.pexels.com/photos/1552102/pexels-photo-1552102.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
